--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,9 @@
     ]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "typedocOptions": {
+    "entryPoints": ["src/."],
+    "out": "docs"
+  }
 }
